# whisper-sentiment-classifier-cpp

./: .gitignore  LICENSE  README.md  makefile  tokenizacion.cpp
NN/: CMakeLists.txt  install.sh  predict.sh  run.sh
NN/CMakeTrain/: CMakeLists.txt
NN/data/: Corpus.txt  test.csv
NN/include/: dataset.h  network.h  tokenizer.h
NN/models/: model.pt
NN/src/: main.cpp  process.cpp
NN/tools/: makeData.py  preprocess_csv.py  stopwords.cpp  test.ipynb  trainResume.py
Tokenizer/: tokenizer.h
Tokenizer/data/: Corpus.txt  stopwordsprocessed.txt
Whisper.cpp/: .gitignore  Makefile  README.md  datosMetricas.txt  makeWhisper.mk  metricaswhisper.mk
Whisper.cpp/models/: README.md
Whisper.cpp/samples/: README.md  jfk.wav.txt  mrbeast.wav.txt
results/: text_tagget.csv
